<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/server_bg" >

    <LinearLayout
        android:id="@+id/login_lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        android:paddingBottom="20dp" >

        <TextView
            android:id="@+id/login_setip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/setip"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/login_name"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp" >

            <CheckBox
                android:id="@+id/login_remberpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:checked="true"
                android:text="@string/rem_pass"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/login_forgetpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/forget_pass"
                android:textSize="17sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/login_login"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_bg"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/login_lin"
        android:layout_below="@+id/login_lin"
        android:layout_marginRight="20dp"
        android:text="@string/register_now"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>