<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/fragment_setting_guide" />

            <TextView
                android:id="@+id/fragment_setting_isneedguide"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:text="@string/fragment_setting_guide1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/fragemnt_setting_weather"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/fragment_setting_language" />

            <TextView
                android:id="@+id/fragment_setting_language"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:text="@string/fragment_setting_language1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/fragment_setting_dateplan"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/fragment_setting_control" />

            <TextView
                android:id="@+id/fragment_setting_controlmodel"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:text="@string/fragment_setting_control1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/fragment_setting_air" />

            <TextView
                android:id="@+id/fragment_setting_air"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:text="@string/fragment_setting_setting" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/fragment_setting_soil" />

            <TextView
                android:id="@+id/fragment_setting_earth"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:text="@string/fragment_setting_setting" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/fragment_setting_light" />

            <TextView
                android:id="@+id/fragment_setting_light"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:text="@string/fragment_setting_setting" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/fragment_co2"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/fragment_setting_co2" />

            <TextView
                android:id="@+id/fragment_setting_co2"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:text="@string/fragment_setting_setting" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>