<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="420dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg" >

    <TextView
        android:id="@+id/forgetpass_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/find_pass"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/forgetpass_name"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/forgetpass_title"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_bg"
        android:hint="@string/input_username" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgetpass_name"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/forgetpass_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="@string/cancle_s"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/forgetpass_confirm"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginLeft="100dp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>