<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="420dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:paddingBottom="20dp" >

    <TextView
        android:id="@+id/register_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/dialog_close" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/register_close"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_bg"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/register_pass"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/register_name"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_bg"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/register_pass"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/register_register"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/register_email"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_bg"
        android:onClick="register"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>