<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/main_title" />

    <View
        android:id="@+id/main_title_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/main_title"
        android:background="#000000" />

    <LinearLayout
        android:id="@+id/main_menu"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/main_title_line"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/main_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/main_home" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/main_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/main_history" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="#000000" />
        </LinearLayout>

        <LinearLayout
           
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                 android:id="@+id/main_control"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/main_control" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/main_setting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/main_setting" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="#000000" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/main_menu_line"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_alignRight="@+id/main_menu"
        android:layout_below="@+id/main_title_line"
        android:background="#000000" />

    <LinearLayout 
        android:id="@+id/main_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/main_title_line"
        android:layout_toRightOf="@+id/main_menu"
        android:orientation="vertical"
        ></LinearLayout>
</RelativeLayout>