<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/history_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/history_rel"
        android:layout_alignParentTop="true"
        android:background="@color/green">
        </android.support.v4.view.ViewPager>

    <RelativeLayout
        android:id="@+id/history_rel"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp" >

        <TextView
            android:id="@+id/history_sensortype_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/sensor_type"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/history_sensortype"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/history_sensortype_txt" />

        <TextView
            android:id="@+id/history_time_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/history_sensortype_txt"
            android:layout_toLeftOf="@+id/history_time"
            android:text="@string/sensor_time"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/history_time"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="50dp"
            android:layout_toLeftOf="@+id/history_select" />

        <Button
            android:id="@+id/history_select"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_bg"
            android:text="@string/select"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>